; ModuleID = '/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_chunk_dss.c_chunk_dss_boot.c'
source_filename = "/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_chunk_dss.c_chunk_dss_boot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@have_dss = common dso_local global i32 0, align 4
@dss_mtx = common dso_local global i32 0, align 4
@dss_base = common dso_local global i8* null, align 8
@dss_prev = common dso_local global i8* null, align 8
@dss_max = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @chunk_dss_boot() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @have_dss, align 4
  %3 = call i32 @cassert(i32 %2)
  %4 = call i64 @malloc_mutex_init(i32* @dss_mtx)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %0
  store i32 1, i32* %1, align 4
  br label %11

7:                                                ; preds = %0
  %8 = call i8* @chunk_dss_sbrk(i32 0)
  store i8* %8, i8** @dss_base, align 8
  %9 = load i8*, i8** @dss_base, align 8
  store i8* %9, i8** @dss_prev, align 8
  %10 = load i8*, i8** @dss_base, align 8
  store i8* %10, i8** @dss_max, align 8
  store i32 0, i32* %1, align 4
  br label %11

11:                                               ; preds = %7, %6
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i32 @cassert(i32) #1

declare dso_local i64 @malloc_mutex_init(i32*) #1

declare dso_local i8* @chunk_dss_sbrk(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
